# lava-eval

./: .gitignore  .pleme-io-release.toml  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix  lava-eval.caixa.lisp
nix/modules/: darwin.nix  home-manager.nix  nixos.nix
src/: eval.rs  import.rs  interface.rs  lib.rs  sexpr.rs
