[package]
authors = ["pleme-io"]
description = "In-memory tatara-lisp evaluator for lava architectures. Parses .tlisp source, evaluates (deflava-architecture ...) forms, produces typed lava_core::Architecture. Magma consumes this directly to do plan/apply in-memory — no on-disk JSON between authoring and apply. Extracted from lava-architectures for reuse by magma-lava + future consumers."
edition = "2024"
license = "MIT"
name = "lava-eval"
readme = "README.md"
repository = "https://github.com/pleme-io/lava-eval"
version = "0.1.9"

[lib]
name = "lava_eval"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
lava-core = { git = "https://github.com/pleme-io/lava-core", branch = "main" }
lava-arch = { git = "https://github.com/pleme-io/lava-arch", branch = "main" }
lava-schema = { git = "https://github.com/pleme-io/lava-schema", branch = "main" }
lava-types = { git = "https://github.com/pleme-io/lava-types", branch = "main" }
